# phantom-persona

./: .gitignore  README.md  pyproject.toml  test_imports.py
configs/: default.yaml
docs/: imports.md
examples/: README.md  basic_usage.py  web_scraping.py
src/phantom_persona/: __init__.py  client.py
src/phantom_persona/config/: __init__.py  levels.py  loader.py  schema.py
src/phantom_persona/core/: __init__.py  browser.py  context.py  exceptions.py  session.py
src/phantom_persona/persona/: __init__.py  identity.py
src/phantom_persona/plugins/: __init__.py  base.py  registry.py
src/phantom_persona/proxy/: __init__.py  models.py
src/phantom_persona/stealth/: __init__.py
src/phantom_persona/stealth/plugins/: __init__.py  basic.py
tests/: __init__.py
tests/e2e/: README.md  __init__.py  conftest.py  test_detection.py
tests/integration/: README.md  __init__.py  test_browser.py
tests/unit/: __init__.py  test_config.py  test_persona.py  test_proxy.py
